--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="/css/base.css" />
   <script type="text/javascript" src="/js/jquery-1.11.3.min.js"></script>
-  <script type="text/javascript" src="/js/onclick.js"></script>
+  <script type="text/javascript" src="/js/index.js"></script>
 </head>
 <body>
   <form>
