--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
     <!-- <script src="//cdn.bootcss.com/react/0.14.4/react.js"></script> -->
     <!-- <script src="//cdn.bootcss.com/react/0.14.4/react-dom.js"></script> -->
     <!-- <script async src="dist/app.js"></script> -->
-    <script async src="dist/appd.js"></script>
+    <script async src="dist/app.js"></script>
   </head>
 
   <body>
