--- a/client/index.html
+++ b/client/index.html
@@ -5,10 +5,9 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <!-- <script src="//cdn.bootcss.com/react/0.14.4/react.min.js"></script> -->
     <!-- <script src="//cdn.bootcss.com/react/0.14.4/react-dom.min.js"></script> -->
-    <!-- <script src="//cdn.bootcss.com/react/0.14.4/react.js"></script> -->
-    <!-- <script src="//cdn.bootcss.com/react/0.14.4/react-dom.js"></script> -->
-    <!-- <script async src="dist/app.js"></script> -->
-    <script async src="dist/app.js"></script>
+    <script src="//cdn.bootcss.com/react/0.14.4/react.js"></script>
+    <script src="//cdn.bootcss.com/react/0.14.4/react-dom.js"></script>
+    <script async src="dist/bundle.js"></script>
   </head>
 
   <body>
