--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>stock show</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <link rel="stylesheet" href="css/index.css" />
     <!-- <script src="//cdn.bootcss.com/react/0.14.4/react.min.js"></script> -->
     <!-- <script src="//cdn.bootcss.com/react/0.14.4/react-dom.min.js"></script> -->
     <script src="//cdn.bootcss.com/react/0.14.4/react.js"></script>
