--- a/client/index.html
+++ b/client/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="css/index.css" />
     <!-- <script src="//cdn.bootcss.com/react/0.14.4/react.min.js"></script> -->
     <!-- <script src="//cdn.bootcss.com/react/0.14.4/react-dom.min.js"></script> -->
-    <script src="//cdn.bootcss.com/react/0.14.4/react.js"></script>
-    <script src="//cdn.bootcss.com/react/0.14.4/react-dom.js"></script>
+    <!-- <script src="//cdn.bootcss.com/react/0.14.4/react.js"></script> -->
+    <!-- <script src="//cdn.bootcss.com/react/0.14.4/react-dom.js"></script> -->
     <script async src="dist/bundle.js"></script>
   </head>
 
