--- a/client/index.html
+++ b/client/index.html
@@ -4,10 +4,12 @@
     <title>stock show</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/my.css" />
     <!-- <script src="//cdn.bootcss.com/react/0.14.4/react.min.js"></script> -->
     <!-- <script src="//cdn.bootcss.com/react/0.14.4/react-dom.min.js"></script> -->
     <!-- <script src="//cdn.bootcss.com/react/0.14.4/react.js"></script> -->
     <!-- <script src="//cdn.bootcss.com/react/0.14.4/react-dom.js"></script> -->
+    <script src="//cdn.bootcss.com/jquery/3.0.0-alpha1/jquery.js"></script>
     <script async src="dist/bundle.js"></script>
   </head>
 
